--- a/.github/workflows/ci-lib.yml
+++ b/.github/workflows/ci-lib.yml
@@ -30,5 +30,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Build lib
         run: pack typecheck webidl
-      - name: Build docs
+      - name: Run tests
         run: pack run webidl-test
