--- a/.github/workflows/ci-lib.yml
+++ b/.github/workflows/ci-lib.yml
@@ -1,3 +1,4 @@
+---
 name: Build
 
 on:
@@ -9,11 +10,6 @@ on:
   pull_request:
     branches:
       - main
-  schedule:
-    # We want to run right after the `latest` image is published.
-    # So, let's do it an hour right after. Look the schedule of publishing here:
-    # https://github.com/alexhumphreys/idris2-dockerfile/blob/main/.github/workflows/docker-image.yml
-    - cron: '0 1 * * *'
 
 defaults:
   run:
@@ -21,80 +17,18 @@ defaults:
 
 jobs:
 
-  read-ver:
-    name: Aquire compiler version
+  build:
+    name: Build the lib with pack latest
     runs-on: ubuntu-latest
     env:
-      IDRIS_VERSION_FILE: .idris-version
-    outputs:
-      idris-ver: ${{ steps.read-ver.outputs.idris-ver }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Read the version
-        id: read-ver
-        run: sed 's/^/::set-output name=idris-ver::/' < "${IDRIS_VERSION_FILE}"
-
-  dependencies:
-    name: Install ${{ matrix.lib }} for ${{ matrix.idris-version }}
-    needs: read-ver
-    runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 1 # We need sequential run!
-      matrix:
-        lib:
-          - elab-util
-          - sop
-          - pretty-show
-          - hedgehog
-        idris-version:
-          - ${{ needs.read-ver.outputs.idris-ver }}
-          - latest
-    container: snazzybucket/idris2api:${{ matrix.idris-version }}
-    steps:
-      - name: Checkout ${{ matrix.lib }}
-        uses: actions/checkout@v2
-        with:
-          repository: stefan-hoeck/idris2-${{ matrix.lib }}
-      - name: Download already installed dependencies
-        uses: actions/download-artifact@master
-        with:
-          name: dependencies-for-${{ matrix.idris-version }}
-          path: /root/.idris2/
-        continue-on-error: true
-      - name: Make ${{ matrix.lib }}
-        run: make lib
-      - name: Install ${{ matrix.lib }}
-        run: make install
-      - name: Save installed lib
-        uses: actions/upload-artifact@master
-        with:
-          name: dependencies-for-${{ matrix.idris-version }}
-          path: /root/.idris2/idris2-*/${{ matrix.lib }}*
-          if-no-files-found: error
-
-  build:
-    name: Build ${{ github.repository }} with ${{ matrix.idris-version }}
-    needs:
-      - read-ver
-      - dependencies
-    runs-on: ubuntu-latest
+      PACK_DIR: /root/.pack
     strategy:
       fail-fast: false
-      matrix:
-        idris-version:
-          - ${{ needs.read-ver.outputs.idris-ver }}
-          - latest
-    container: snazzybucket/idris2api:${{ matrix.idris-version }}
+    container: ghcr.io/stefan-hoeck/idris2-pack:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Download installed dependencies
-        uses: actions/download-artifact@master
-        with:
-          name: dependencies-for-${{ matrix.idris-version }}
-          path: /root/.idris2/
       - name: Build lib
-        run: make lib
-      - name: Build test
-        run: make test
+        run: pack typecheck webidl
+      - name: Run tests
+        run: pack run webidl-test
