--- a/pack.toml
+++ b/pack.toml
@@ -12,37 +12,23 @@ ipkg = "test.ipkg"
 [custom.all.elab-util]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-elab-util"
-commit = "latest:derive"
+commit = "latest:main"
 ipkg   = "elab-util.ipkg"
 
 [custom.all.sop]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-sop"
-commit = "latest:derive"
+commit = "latest:main"
 ipkg   = "sop.ipkg"
 
 [custom.all.pretty-show]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-pretty-show"
-commit = "latest:derive"
+commit = "latest:main"
 ipkg   = "pretty-show.ipkg"
 
 [custom.all.hedgehog]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-hedgehog"
-commit = "latest:derive"
+commit = "latest:main"
 ipkg   = "hedgehog.ipkg"
-
-[custom.all.json]
-type   = "git"
-url    = "https://github.com/stefan-hoeck/idris2-json"
-commit = "latest:derive"
-ipkg   = "json.ipkg"
-test   = "test/test.ipkg"
-
-[custom.all.dom]
-type   = "git"
-url    = "https://github.com/stefan-hoeck/idris2-dom"
-commit = "latest:derive"
-ipkg   = "dom.ipkg"
-test   = "test/test.ipkg"
