--- a/pack.toml
+++ b/pack.toml
@@ -15,6 +15,12 @@ url    = "https://github.com/stefan-hoeck/idris2-elab-util"
 commit = "latest:main"
 ipkg   = "elab-util.ipkg"
 
+[custom.all.elab-pretty]
+type   = "git"
+url    = "https://github.com/stefan-hoeck/idris2-elab-util"
+commit = "latest:main"
+ipkg   = "elab-pretty.ipkg"
+
 [custom.all.sop]
 type   = "git"
 url    = "https://github.com/stefan-hoeck/idris2-sop"
