--- a/pack.toml
+++ b/pack.toml
@@ -2,39 +2,15 @@
 type = "local"
 path = "."
 ipkg = "webidl.ipkg"
-test = "test/test.ipkg"
 
-[custom.all.webidl-test]
-type = "local"
-path = "test"
-ipkg = "test.ipkg"
-
-[custom.all.elab-util]
+[custom.all.parser]
 type   = "git"
-url    = "https://github.com/stefan-hoeck/idris2-elab-util"
+url    = "https://github.com/stefan-hoeck/idris2-parser"
 commit = "latest:main"
-ipkg   = "elab-util.ipkg"
+ipkg   = "parser.ipkg"
 
-[custom.all.elab-pretty]
+[custom.all.parser-webidl]
 type   = "git"
-url    = "https://github.com/stefan-hoeck/idris2-elab-util"
+url    = "https://github.com/stefan-hoeck/idris2-parser"
 commit = "latest:main"
-ipkg   = "elab-pretty.ipkg"
-
-[custom.all.sop]
-type   = "git"
-url    = "https://github.com/stefan-hoeck/idris2-sop"
-commit = "latest:main"
-ipkg   = "sop.ipkg"
-
-[custom.all.pretty-show]
-type   = "git"
-url    = "https://github.com/stefan-hoeck/idris2-pretty-show"
-commit = "latest:main"
-ipkg   = "pretty-show.ipkg"
-
-[custom.all.hedgehog]
-type   = "git"
-url    = "https://github.com/stefan-hoeck/idris2-hedgehog"
-commit = "latest:main"
-ipkg   = "hedgehog.ipkg"
+ipkg   = "webidl/parser-webidl.ipkg"
